--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,1 +1,8 @@
-<p>blog works!</p>
+<h1>Tech Blogs</h1>
+
+<ng-container *ngFor="let item of (blogs$ | async)">
+    <mat-card >
+        <mat-card-header>{{ item.title }}</mat-card-header>
+        <mat-card-content>{{ item.description }}</mat-card-content>
+    </mat-card>
+</ng-container>
