--- a/src/app/pages/blog/blog.component.scss
+++ b/src/app/pages/blog/blog.component.scss
@@ -10,4 +10,12 @@
 .blog-card{
     margin: 10px auto;
     width: 60%;
+};
+
+.edit-btn{
+    text-align: right;
+    width: 100%;
+    button{
+        margin: 0px 10px;
+    }
 }
