--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <h3>{{ name }}</h3>
     <h3 [innerHTML]="name"></h3>
 
@@ -14,4 +14,24 @@
             <p [innerText]="item"></p>
         </ng-container>
     </div>
-</div>
+</div> -->
+
+<!-- <div class="container">
+    <h1 class="title">{{ childData }}</h1>
+    <div class="container-child">
+        <app-child 
+         (inputEvent)="inputEvent($event)"
+         [productStream]="productSubject" 
+         (cartAction)="receiveCartSubject($event)">   
+        </app-child>
+    </div>
+    <div class="container-cart">
+        <div *ngIf="cart.length" class="cart">
+         Cart Items: {{cart.length}}
+        </div>
+    </div>
+
+    <button mat-raised-button color="primary" (click)="updateProduct()" >updateProduct</button>
+</div> -->
+
+<app-rxjs-operator></app-rxjs-operator>
