--- a/src/app/components/rxjs-operator.component.html
+++ b/src/app/components/rxjs-operator.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <form class="container-inputs">
         <mat-form-field>
             <mat-label>Search items</mat-label>
@@ -16,4 +16,18 @@
     <ul>
         <li *ngFor="let item of filteredItems$ | async">{{ item.name }}</li>
     </ul>
-</div>
+</div> -->
+
+<!-- Zip operator & combineLatest operator-->
+
+<button mat-raised-button (click)="_flatBread$.next('flat bread')">Add flat bread</button>
+<button mat-raised-button (click)="_meat$.next('meat')">meat</button>
+<button mat-raised-button (click)="_sauce$.next('sauce')">_sauce</button>
+<button mat-raised-button (click)="_tomato$.next('tomato')">_tomato</button>
+<button mat-raised-button (click)="_cabbage$.next('cabbage')">Add flat bread</button>
+
+<ng-container *ngIf="durms$ | async">
+    <ul>
+        <li *ngFor="let item of durms$ | async">{{ item }}</li>
+    </ul>
+</ng-container>
