Refactor app component to implement RxJS schedulers and add async execution demonstration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
-<app-spinner></app-spinner>
+<app-spinner></app-spinner> -->
+
+<main>
+    <h1>Rxjs Scheduler</h1>
+    <button mat-raised-button (click)="runAsync()">Run Async</button>
+</main>
