Add FormComponent and update app component template to include it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,11 @@
 <router-outlet></router-outlet>
 <app-spinner></app-spinner> -->
 
-<main>
+<app-form></app-form>
+
+<!-- <main>
     <h1>Rxjs Scheduler</h1>
-    <!-- <h2 >Permission Allowed</h2> -->
     <h2 appPermission [hello]="permission[1]">Permission Allowed</h2>
     <h2 appPermission [hello]="permission[11]">Permission Not Allowed</h2>
     <button mat-raised-button (click)="runAsync()">Run Async</button>
-</main>
+</main> -->
