Add TodoComponent with functionality for adding, editing, and removing todos; include styles and tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
 <router-outlet></router-outlet>
 <app-spinner></app-spinner> -->
 
-<app-form></app-form>
+<!-- <app-form></app-form> -->
+
+<!-- <app-todo></app-todo> -->
+
 
 <!-- <main>
     <h1>Rxjs Scheduler</h1>
@@ -10,3 +13,20 @@
     <h2 appPermission [hello]="permission[11]">Permission Not Allowed</h2>
     <button mat-raised-button (click)="runAsync()">Run Async</button>
 </main> -->
+
+
+
+
+ <ng-container *ngFor="let user of array1">
+    <p>{{ user.name }} - {{ user.age }}</p>
+ </ng-container>
+
+
+
+
+
+
+
+
+
+
